--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -7,6 +7,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@shihengtech/eslint-config-javascript": "^5.0.0"
+    "@shihengtech/eslint-config-javascript": "^5.0.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
