--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -7,6 +7,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@shihengtech/eslint-config-javascript": "^5.0.0"
+    "@shihengtech/eslint-config-javascript": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0"
   }
 }
